# frame-metadata

./: CHANGELOG.md  Cargo.toml  MoneyMan573.io.ru  README.md  RELEASING.md  Setup_Build-meta-SecuUrRiItTy_build.ru  _cfg.ru  deny.toml
.github/workflows/: _cfg_rust.yml  deny.yml  lint.yml  rust.yml
cli/: Cargo.toml
cli/src/: main.rs
frame-metadata/: Cargo.toml
frame-metadata/src/: common.rs  convert.rs  decode_different.rs  ir.rs  lib.rs  v10.rs  v11.rs  v12.rs  v13.rs  v14.rs  v15.rs  v16.rs  v8.rs  v9.rs
frame-metadata/src/ir/: api.rs  mod.rs  types.rs  v14.rs
utils/: Cargo.toml  node-runtime-v13.scale  node-runtime-v14.scale
utils/src/: convert.rs  error.rs  lib.rs
