[package]
name = "frame-metadata-cli"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/frame-metadata/"
description = "Command line tool for metadata utilities"
readme = "README.md"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
frame-metadata = { version = "14.0.0-rc.2", path = "../frame-metadata" }
frame-metadata-utils = { version = "0.1.0", path = "../utils" }
scale-info = { version = "0.10.0", default-features = false, optional = true, features = ["derive"] }

[features]
default = [
    "std",
]
std = [
    "frame-metadata/std",
    "frame-metadata-utils/std",
    "scale-info/std",
]