[package]
name = "frame-metadata"
version = "14.0.0-rc.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/frame-metadata/"
description = "Metadata types for Substrate runtimes"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
cfg-if = "1.0.0"
scale-info = { version = "0.10.0", default-features = false, optional = true, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

[features]
default = ["std", "v14"]
v12 = []
v13 = []
v14 = ["scale-info"]
std = [
	"codec/std",
	"scale-info/std",
	"scale-info/serde",
	"scale-info/decode",
	"serde",
]
