[package]
name = "frame-metadata-utils"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/frame-metadata/"
description = "Metadata utilities"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.11"
frame-metadata = { version = "12.0", path = "../frame-metadata", default-features = false}
scale = { package = "parity-scale-codec", version = "1.3.4" } 
serde_json = "1.0.60"

[features]
default = [
  "frame-metadata/v12",
  "frame-metadata/std"
]
